[package]
name = "eetf"
version = "0.6.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Library for encoding/decoding Erlang External Term Format"
documentation = "https://docs.rs/eetf"
homepage = "https://github.com/sile/eetf"
repository = "https://github.com/sile/eetf"
readme = "README.md"
keywords = ["erlang"]
license = "MIT"
edition = "2018"

[badges]
coveralls = {repository = "sile/eetf"}

[dependencies]
num = "0.4"
byteorder = "1"
libflate = "1"
thiserror = "1"