[package]
name = "eetf"
version = "0.9.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Library for encoding/decoding Erlang External Term Format"
documentation = "https://docs.rs/eetf"
homepage = "https://github.com/sile/eetf"
repository = "https://github.com/sile/eetf"
readme = "README.md"
keywords = ["erlang"]
license = "MIT"
edition = "2021"

[dependencies]
num = "0.4"
byteorder = "1"
libflate = "2"
ordered-float = "3"
thiserror = "1"