[package]
name = "eetf"
version = "0.12.0"
description = "Library for encoding/decoding Erlang External Term Format"
documentation = "https://docs.rs/eetf"
homepage = "https://github.com/sile/eetf"
repository = "https://github.com/sile/eetf"
readme = "README.md"
keywords = ["erlang"]
license = "MIT"
edition = "2024"

[dependencies]
noflate = "0.1"
num-bigint = "0.4"
num-traits = "0.2.19"
